src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Core_IPS_Project_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Projects enable different teams, often from different companies, to collaborate on resolving cases. When you are creating a new case related to one of your projects you can select this during case creation.</inlineHelpText>
        <label>Premier Support Project</label>
        <referenceTo>Core_IPS_Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CEP_Case_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CEP Admin</label>
        <queue>CEP_Case</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_CaseQ_Org_002_Unassigned_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Org 002 - Unassigned</label>
        <queue>Core_IPS_CaseQ_Org_002_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_CaseQ_Org_003_ASMO_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Org 003 - ASMO</label>
        <queue>Core_IPS_CaseQ_Org_003_ASMO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_CaseQ_Org_003_Unassigned_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Org 003 - Unassigned</label>
        <queue>Core_IPS_CaseQ_Org_003_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_CaseQ_Org_011_Unassigned_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Org 011 - Unassigned</label>
        <queue>Core_IPS_CaseQ_Org_011_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_CaseQ_Unassigned_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Unassigned</label>
        <queue>Core_IPS_CaseQ_Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_JAD2_Unassigned_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>JAD2 Unassigned</label>
        <queue>Core_JAD2_Unassigned_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GEC_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>GEC Case Queue</label>
        <queue>GEC_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>